--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,38 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>react-news</title>
-        <meta name="description" content="Hacker News clone written in ReactJS, RefluxJS, and Firebase">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3">
+  <head>
+    <meta charset="utf-8">
+    <title>Flashcards</title>
+    <meta name="description" content="Hacker News clone written in ReactJS, RefluxJS, and Firebase">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=3">
 
-        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600">
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-        <!-- build:css main.min.css -->
-        <link rel="stylesheet" href="/main.css">
-        <!-- endbuild -->
-    </head>
-    <body>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <!-- build:css main.min.css -->
+    <link rel="stylesheet" href="/main.css">
+    <!-- endbuild -->
+  </head>
+  <body>
+    <!--[if lt IE 10]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
-        <div id="app" class="full-height"></div>
+    <div id="app" class="full-height"></div>
 
-        <!-- build:js app.min.js -->
-        <script src="/app.js"></script>
-        <!-- endbuild -->
+    <!-- build:js app.min.js -->
+    <script src="/app.js"></script>
+    <!-- endbuild -->
 
-        <!-- Google Analytics -->
-        <script>
-            /* eslint-disable */
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-53148902-1');ga('send','pageview');
-        </script>
-    </body>
+    <!-- Google Analytics -->
+    <!--<script>
+      /* eslint-disable */
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-53148902-1');ga('send','pageview');
+    </script>-->
+  </body>
 </html>
